2009-02-07  Pedro Alves  <pedroalves@users.sourceforge.net>

	* scripts: New top-level directory.  Move build-mingw32ce.sh,
	build-cegcc.sh, and build-mingw32ce-dlls.sh there.

2009-02-07  Pedro Alves  <pedroalves@users.sourceforge.net>

	* VERSIONS: Update to reflect recent binutils, w32api and mingw
	merges from upstream.

2008-09-30  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh (COMPONENTS_NUM): Correctly get array size.
	* build-mingw32ce.sh (COMPONENTS_NUM): Likewise.

2008-09-26  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh (build_bootstrap_gcc): Remove unneeded
	target-libgcc steps.	
	* build-mingw32ce.sh (build_bootstrap_gcc): Likewise.

2008-09-25  Pedro Alves  <pedroalves@users.sourceforge.net>

	Enable passing -jFOO to components that support it.

	* build-cegcc.sh: Add support for -j/--parallelism option.
	(build_binutils, build_bootstrap_gcc, build_w32api, build_gcc)
	(build_newlib, build_profile): Use it.

	* build-mingw32ce.sh: Add support for -j/--parallelism option.
	(build_binutils, build_bootstrap_gcc, build_w32api, build_mingw)
	(build_gcc, build_gdb, build_gdbserver, build_profile): Use it.

2008-09-25  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh (COMPONENTS): Fix typo.

2008-09-25  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh (build_newlib, build_cegccdll)
	(build_cegccthrddll, build_stdcppdll, build_profile, build_docs):
	cd to BUILD_DIR on exit.
	* build-mingw32ce.sh (build_w32api, build_mingw): Likewise.

2008-09-24  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh (build_gcc): Remove -j4.
	* build-mingw32ce.sh (build_gcc): Likewise.

2008-09-24  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-cegcc.sh: Rewrite based on build-mingw32ce.sh.

2008-09-24  Pedro Alves  <pedroalves@users.sourceforge.net>

	* build-mingw32ce.sh: Require bash.  Use a central a module list